# hse-os-2223

./: README.md
bhw1/: README.md  punctuation.h
bhw1/4p/: main.c
bhw1/5p/: main.c
bhw1/6p/: main.c
bhw1/7p/: main.c
bhw1/tests/: 1.in  1.out  2.in  2.out  4.out  5.in  5.out
bhw2/: README.md  libgen.py
bhw2/4/: main.c
bhw2/5/: main.c  test_output.txt
bhw2/7/: client.c  server.c  shared.h
bhw2/testlib/: 0_0.txt  0_1.txt  0_2.txt  0_3.txt  1_0.txt  1_1.txt  1_2.txt  1_3.txt  2_0.txt  2_1.txt  2_2.txt  2_3.txt  3_0.txt  3_1.txt  3_2.txt  3_3.txt
bhw3/: CMakeLists.txt  README.md  client.c  observer.c  server.c
bhw3/liblibrary/: library.c
bhw4/: README.md  client.c  hash.h  observer.c  server.c
bhw4/liblibrary/: book.c  book.h  library.c  library.h
ihw2/: README.md  functions.sh  if.sh  while.sh
ihw3/: README.md  main.c
ihw4/: README.md  main.c
ihw5/: .gitignore  README.md  messenger.c
ihw6/: README.md  client.c  server.c  shared.h
ihw7/: README.md  shared.h
ihw8/: client.c  server.c  shared.h
